# codebase-synapse

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
codebase-guard/: Cargo.toml
codebase-guard/src/: main.rs
npm/: .npmignore  download.mjs  package.json
npm/platform-packages/darwin-arm64/: index.js  package.json
npm/platform-packages/darwin-x64/: index.js  package.json
npm/platform-packages/linux-arm64/: index.js  package.json
npm/platform-packages/linux-x64/: index.js  package.json
npm/platform-packages/win32-arm64/: index.js  package.json
npm/platform-packages/win32-x64/: index.js  package.json
scripts/: sync-versions.js
src/: config.rs  lib.rs  main.rs
src/access/: mod.rs
src/cli/: artifact.rs  install.rs  mod.rs
src/context/: mod.rs
src/cypher/: mod.rs  parser.rs  planner.rs
src/db/: mod.rs  queries.rs  schema.rs
src/embedding/: candle.rs  mod.rs
src/git/: archaeology.rs  hotspot.rs  mod.rs
src/graph/: boundaries.rs  builder.rs  impact.rs  leiden.rs  mod.rs  pagerank.rs  traversal.rs  wiki.rs
src/indexer/: calls.rs  infra.rs  manifests.rs  merkle.rs  mod.rs  routes.rs  walker.rs  watcher.rs
src/mcp/: architecture.rs  mod.rs  protocol.rs  tools.rs  transport.rs
src/memory/: decay.rs  mod.rs  notes.rs  session.rs
src/parser/: language.rs  mod.rs
src/parser/extractors/: mod.rs
src/search/: bm25.rs  hybrid.rs  mod.rs  vector.rs
src/semantic/: mod.rs
src/similarity/: mod.rs
src/util/: hash.rs  mod.rs  tokenizer.rs
tests/: boundaries_test.rs  integration.rs  leiden_test.rs  mcp_protocol.rs  pagerank_test.rs  sprint_integration.rs  wiki_test.rs
tests/common/: mod.rs
