[package]
name = "codebase-guard"
version = "0.1.0"
edition = "2021"
description = "PreToolUse hook — blocks writes on high-impact files"

[[bin]]
name = "codebase-guard"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
anyhow = "1"
